// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArgyleModalAdapter > event:other > logs ApplicantAccessedArgyleModalMFAScreen Event 1`] = `
{
  "name": "mfa - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantAttemptedArgyleLogin Event 1`] = `
{
  "name": "login - form submitted",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantClosedArgyleLinkFromErrorScreen for link closed event 1`] = `
{
  "name": "link closed",
  "properties": {
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgleLimitError for account error with limit error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "login_attempts_exceeded",
    "errorMessage": "Too many attempts",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgleMfaError for account error with MFA error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "mfa_timeout",
    "errorMessage": "MFA timeout",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArglePlatformError for account error with platform error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "platform_unavailable",
    "errorMessage": "Platform unavailable",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAccountIssueError for account error with account issue code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "account_not_found",
    "errorMessage": "Account not found",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthRequiredLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "auth_required",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for account error with auth error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "invalid_credentials",
    "errorMessage": "Invalid credentials",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleConnectionUnavailableLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "connection_unavailable",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleCredentialError for account error with credential error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "invalid_employer_identifier",
    "errorMessage": "Invalid employer",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleExpiredCredentialsLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "expired_credentials",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleInvalidAuthLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "invalid_auth",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleInvalidCredentialsLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "invalid_credentials",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleMfaCanceledLoginError Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "mfa_cancelled_by_the_user",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for account error with no error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorMessage": "Unknown error",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for account error with system error code 1`] = `
{
  "name": "account error - opened",
  "properties": {
    "errorCode": "system_error",
    "errorMessage": "System error",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for error opened event 1`] = `
{
  "name": "error - opened",
  "properties": {
    "errorCode": "invalid_user_token",
    "errorMessage": "Invalid user token",
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantUpdatedArgyleSearchTerm Event 1`] = `
{
  "payload": {
    "name": "search - term updated",
    "properties": {
      "tab": "tab",
      "term": "search term",
    },
    "tab": "tab",
    "term": "search term",
  },
  "tab": "tab",
  "term": "search term",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleDefaultProviderSearch Event 1`] = `
{
  "name": "search - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleLoginPage Event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "other",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleProviderConfirmation Event 1`] = `
{
  "name": "search - link item selected",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountCreated Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountError Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountRemoved Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > open > calls track user action 1`] = `
[
  "ApplicantSelectedEmployerOrPlatformItem",
  {
    "is_default_option": true,
    "item_id": "id",
    "item_name": "test-name",
    "item_type": "response-type",
    "locale": "en",
    "provider_name": "pinwheel",
  },
]
`;
